@startuml
'https://plantuml.com/class-diagram
Game..>PlayerDao
PlayerDaoImpl ..|>PlayerDao
PlayerDaoImpl-->Player
PlayerDaoImpl..>CompareScore


class Game

class Player{
    -score:int
    -name:String
    -time: String
    +Player(int score, String name)
    +setScore(int score):void
    +getScore():int
    +setName(String name):void
    +getName(): String
    +getTime():String

}
interface PlayerDao{
    +doAdd(Player players): void
    +scoreArray():void
}
class PlayerDaoImpl{
    +getPlayers():ArrayList<Player>
    -players:ArrayList<Player>
    +doAdd(Player players): void
    +scoreArray():void
    +storage():void
    +read():void
}

class CompareScore{
    +compare(Player o1, Player o2) :int

}

@enduml